--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -28,11 +28,11 @@
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp"
-                placeholder="Enter email" value="muhammedadilas123@gmail.com" required>
+                placeholder="Enter email" required>
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">Password</label>
-              <input type="password" name="password" value="Adil@123" id="password" class="form-control" aria-describedby="emailHelp"
+              <input type="password" name="password" id="password" class="form-control" aria-describedby="emailHelp"
                 placeholder="Enter Password">
             </div>
             <div class="form-group mt-3">
